--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body>
+<body style="background-color:#49D1CB">
 	<div>
     	<p style="font-family:bitter; font-size:36px">All praise be unto Tegan!!!!</p>
         <img src="images/thesavior.jpg">
